[package]
name = "whatversion"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Guerreschi"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal"]

[dependencies]
octocrab = "0.31.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
